# Cardano-Blockchain-Plutus

./: GithubAccessToken  README.md  commands  h1W05WithoutParams.ts  h2W05mintingNFT.ts  homework1Week04.ts  homework1Week05.ts  homework2Week04.ts  raoulKey  smallChangeWallet.html  testMintingPolicy.ts  tontine.plutus  tontineAddr  tontineAddr2  tontineOffChain.ts
TestBlockfrost/: CHANGELOG.md  README.md  TestBlockfrost.cabal  package.yaml  stack.yaml  testInCode-tx.raw  testInCode-tx.signed
TestBlockfrost/app/: Main.hs
TestBlockfrost/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
TestBlockfrost/dist-newstyle/packagedb/ghc-8.10.7/: TestBlockfrost-0.1.0.0-inplace.conf  package.cache
TestBlockfrost/src/: Example.hs  Functions.hs  TestBlockfrost.hs
TestBlockfrost/test/: TestingCode.hs
code/Week06/homework/: TExploitableSwap.hs
code/Week08/assets/: staking.plutus
code/Week08/tmp/: tx.tx  tx.txbody
code/dist-newstyle/cache/: compiler  config  plan.json  source-hashes  up-to-date
code/dist-newstyle/packagedb/ghc-8.10.7/: package.cache  utilities-0.1.0.0-inplace.conf
code/dist-newstyle/src/: cardano-a_-69e96f3eceed3ed5.cache  cardano-l_-793ecdcee1fc1ce7.cache  cardano-w_-c9e033b0ec7ad11b.cache  plutus-si_-405d5a8470902f38.cache  purescrip_-fa901c7e00b7f37b.cache  quickchec_-59a1af83b9d68ed6.cache  servant-p_-232829bf471577c2.cache
monWallet/: addr2.skey  addr2.vkey  maCleApi.txt  privateKey.skey  publicKey.vkey  raoulAddr2  raoulAddr2Hash  stake.skey  stake.vkey
progetto/: CHANGELOG.md  cabal.project  progetto.cabal
progetto/dist-newstyle/cache/: compiler  config  plan.json  source-hashes  up-to-date
progetto/dist-newstyle/packagedb/ghc-8.10.7/: package.cache  utilities-0.1.0.0-inplace.conf
progetto/dist-newstyle/src/: cardano-a_-69e96f3eceed3ed5.cache  cardano-l_-793ecdcee1fc1ce7.cache  cardano-w_-c9e033b0ec7ad11b.cache  plutus-si_-405d5a8470902f38.cache  purescrip_-fa901c7e00b7f37b.cache  quickchec_-59a1af83b9d68ed6.cache  servant-p_-232829bf471577c2.cache
progetto/src/: OffChainTontine.hs  OnChainTontine.hs
testData/: datum.json  datum2.json  redeemer.json  redeer2.json  tontineRedeemer.json  tontineRedeemer2.json
testing/: .gitignore  fichier.txt  sortie.txt  testing.cabal
testing/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
testing/dist-newstyle/packagedb/ghc-8.10.7/: package.cache  testing-0.1.0.0-inplace.conf
testing/src/: IoWithYannick.hs  TestFonctions.hs  TestRabbitmq.hs
testing/tests/: PropertiesTest.hs  TestingCode.hs
